work en dockerize

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,28 +1,18 @@
-default: &default
+development:
   adapter: postgresql
   encoding: unicode
   pool: 5
-
-development:
-  <<: *default
   database: farmer_development
   host: 192.168.99.100
   port: 32769
   username: postgres
   password: postgres
-
-test:
-  <<: *default
-  database: farmer_test
-  host: 192.168.99.100
-  port: 32769
-  username: postgres
-  password: postgres
-
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: farmer_production
-  host: 192.168.99.100
-  port: 32769
-  username: postgres
-  password: postgres
+  host: <%= ENV["SQL_HOST"] %>
+  port: <%= ENV["SQL_PORT"] %>
+  username: <%= ENV["SQL_USERNAME"] %>
+  password: <%= ENV["SQL_PASSWORD"] %>
